--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["env"],
-  "plugins": ["transform-vue-jsx"]
+  "presets": ["@babel/preset-env"],
+  "plugins": ["transform-vue-jsx", "@babel/transform-runtime"]
 }
