--- a/package.json
+++ b/package.json
@@ -5,20 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.js --profile --json > compilation-stats.json",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js --progress --display-error-details --debug"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.2.0",
     "autoprefixer": "^9.4.2",
-    "babel-core": "^6.26.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
     "cross-env": "^5.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
@@ -33,7 +31,16 @@
     "webpack-dev-server": "^3.1.10"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "babel-runtime": "^6.26.0",
     "css-loader": "^1.0.1",
-    "style-loader": "^0.23.1"
-  }
+    "file-loader": "^3.0.1",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2"
+  },
+  "browserslist": [
+    "iOS >= 7",
+    "Android >= 4.1"
+  ]
 }
